package ucf.assignments;

import java.util.ArrayList;

public class List {
    private String listTitle;
    private ArrayList <Item> ToDoList;

    public String getListTitle() {
        return listTitle;
    }

    public void setListTitle(String listTitle) {
        this.listTitle = listTitle;
    }
}
