@startuml
'https://plantuml.com/class-diagram

class ToDoList{
    + add_list()
    + remove_list()
    + edit_title()
}
class List{
    + add_item()
    + remove_item()    + display_items()
    + display_incomplete()
    + display_complete()
    + save_items_single_list()
    + save_items_multiple_list()
    + load_list_single()
    + load_multiple_list()
}
class edit_item{
    + edit_due_date()
    + edit_description()
    + mark_complete()
}

List -- edit_list

class Item{
    - dueDate
    - incomplete
    - complete
    + description

}

ToDoList *-- List
List *-- Item
@enduml